--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/kit": "next",
 		"@types/bcrypt": "^5.0.0",
 		"@types/cookie": "^0.5.1",
+		"@types/cookie-signature": "^1.0.4",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
 		"autoprefixer": "^10.4.7",
@@ -39,6 +40,8 @@
 	"type": "module",
 	"dependencies": {
 		"bcrypt": "^5.0.1",
-		"cookie": "^0.5.0"
+		"cookie": "^0.5.0",
+		"cookie-signature": "^1.2.0",
+		"dotenv": "^16.0.1"
 	}
 }
